# chatbot-langraph-backend

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: graph.py  llm_provider.py
agents/nodes/: intent_classifier.py  response_generator.py
alembic/: env.py
alembic/versions/: 26071e261610_create_new_pension_scheme_tables.py  3dc5c070dd11_initial_migration.py  42485ad6ffca_rename_pension_table.py  9e4656af1c9a_create_sessions_table.py  ac981319f74c_add_pension_models.py  e4a54d696fb9_create_new_pensiopremiumen_scheme_tables.py  f729715599b2_create_sessions_table.py
api/routes/: session.py
api/routes/v1/: chat.py  (+1 more)
app/agents/: get_context.py  graph.py  llm_provider.py  state.py
app/core/: config.py
app/db/: connection.py
app/documentIndex/: index.py
app/enums/: __init__.py  ai_model.py  role.py  scheme.py
app/models/: Pension_premium.py  __init__.py  chat_message.py  conversation.py  pension_calculation.py  pension_entry_age.py  pension_payout.py  pension_premium_plan.py  scheme.py  session.py
app/schemas/: __init__.py  chat.py  session.py
app/service/: chat_service.py  chat_service2.py  session_service.py
app/utils/: pension_calculator.py
config/: db.py  settings.py
core/: config.py
db/: connection.py
enums/: __init__.py  role.py  scheme.py
models/: __init__.py  chat_message.py  conversation.py  pension_calculation.py  scheme.py  session.py  user.py
schemas/: __init__.py  chat.py  pension.py  session.py  user.py
service/: chat_service.py  session_service.py
test/: test_calculator.py  test_chatbot.py
(+20 files in other folders)
